V1.5.7.1 - nullptr correction